# newback

./: .gitignore  db.sqlite3  pyproject.toml
adocao/: admin.py  permissions.py
adocao/migrations/: 0001_initial.py  0002_petadocao_user_petperdido_user.py  0003_petadocao_foto_petperdido_foto.py  0004_petadocao_favoritos_petperdido_favoritos.py
adocao/models/: __init__.py  adocao_pet.py  perdido_pet.py
adocao/serializers/: __init__.py  adocao_pet.py  perdido_pet.py
adocao/views/: __init__.py  adocao_pet.py  favoritos.py  perdido_pet.py
config/: settings.py  urls.py
users/: admin.py  permissions.py
users/migrations/: 0001_initial.py  0002_user_foto.py  0003_alter_organizationuser_cnpj.py
users/models/: __init__.py  base.py  common_user.py  organization_user.py
users/serializers/: __init__.py  login.py  profile.py  register.py  update.py
users/views/: __init__.py  delete.py  list.py  profile.py  register.py  update.py
